[package]
name = "hlvm"
version = "0.10.0"
authors = ["adam"]
edition = "2018"
license = "MIT"
description = "The HLVM library / tools"

[lib]
name = "hlvm"
path = "src/lib.rs"

[[bin]]
name = "hlvm"
path = "src/bin.rs"


[profile.release]
opt-level = 3


[dependencies]
hlvm_runtime = "0.7.0"
# hlvm_runtime = {path="../hlvm_runtime"}